[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "default env for development of my application"
authors = ["Daniil <danillnew1@gmail.com"] 
license = "-"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
streamlit = "^1.41.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}
matplotlib = "^3.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
